Adds a vectorized version of the binary search using the Java Vector API.